@@ -3,9 +3,13 @@ check_PROGRAMS = $(TESTS)
 
 INCLUDES = -I$(top_srcdir) 
 
-skstreamtestrunner_SOURCES = skstreamtestrunner.cpp
+skstreamtestrunner_SOURCES = skstreamtestrunner.cpp \
+        basicskstreamtest.h \
+        childskstreamtest.h \
+        skservertest.h \
+        socketbuftest.h
 
 skstreamtestrunner_LDADD= \
     @CPPUNIT_LIBS@ \
-    $(top_srcdir)/libskstream.la
+    $(top_builddir)/libskstream.la
 
